# parser-icae

./: .env.example  .gitignore  README.md  config.yaml  env.txt  install-deps.bat  install-deps.ps1  install-deps.sh  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  start-web.sh
.github/workflows/: pages.yml
scripts/: export_static_data.py
src/icae_mention_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/parser/: __init__.py  cli.py  config.py  engine.py  env_store.py  filters.py  metadata.py  models.py  report.py  storage.py
src/parser/api/: __init__.py  jobs.py  main.py  schemas.py  server.py
src/parser/search/: __init__.py  duckduckgo.py  rss.py  vk.py  yandex.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: StaticModeBanner.tsx
web/src/components/config/: ConfigFields.tsx
web/src/components/layout/: AppShell.tsx
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  table.tsx  textarea.tsx
web/src/lib/: api.ts  utils.ts
web/src/pages/: ConfigPage.tsx  DashboardPage.tsx  MentionsPage.tsx  ReportsPage.tsx  SettingsPage.tsx
