[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icae-mention-parser"
version = "1.0.0"
description = "Ежемесячный мониторинг упоминаний ИЦАЭ Томска в интернете"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
    "lxml>=5.0",
    "ddgs>=9.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
icae-parser = "parser.cli:app"
icae-web = "parser.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]
